--- a/actividad2-2.html
+++ b/actividad2-2.html
@@ -61,10 +61,14 @@
 
                 <div class="transformaciones-banco" id="banco">
                     <div class="transformacion-pieza" draggable="true" data-id="toUpper">String::toUpperCase</div>
-                    <div class="transformacion-pieza" draggable="true" data-id="length">String::length</div>
-                    <div class="transformacion-pieza" draggable="true" data-id="doble">n -> n * 2</div>
                     <div class="transformacion-pieza" draggable="true" data-id="toLower">String::toLowerCase</div>
+                    <div class="transformacion-pieza" draggable="true" data-id="trim">String::trim</div>
+                    <div class="transformacion-pieza" draggable="true" data-id="length">String::length</div>
+                    <div class="transformacion-pieza" draggable="true" data-id="isEmpty">String::isEmpty</div>
+                    <div class="transformacion-pieza" draggable="true" data-id="doble">n -> n * 2</div>
+                    <div class="transformacion-pieza" draggable="true" data-id="triple">n -> n * 3</div>
                     <div class="transformacion-pieza" draggable="true" data-id="cuadrado">n -> n * n</div>
+                    <div class="transformacion-pieza" draggable="true" data-id="mitad">n -> n / 2</div>
                 </div>
             </div>
 
