--- a/actividad3-1.html
+++ b/actividad3-1.html
@@ -47,11 +47,17 @@
 
                 <div class="operaciones-terminales-banco" id="banco">
                     <div class="operacion-terminal-pieza" draggable="true" data-id="collect">collect(Collectors.toList())</div>
+                    <div class="operacion-terminal-pieza" draggable="true" data-id="collectSet">collect(Collectors.toSet())</div>
                     <div class="operacion-terminal-pieza" draggable="true" data-id="count">count()</div>
+                    <div class="operacion-terminal-pieza" draggable="true" data-id="sum">sum()</div>
                     <div class="operacion-terminal-pieza" draggable="true" data-id="anyMatch">anyMatch()</div>
+                    <div class="operacion-terminal-pieza" draggable="true" data-id="allMatch">allMatch()</div>
+                    <div class="operacion-terminal-pieza" draggable="true" data-id="noneMatch">noneMatch()</div>
                     <div class="operacion-terminal-pieza" draggable="true" data-id="max">max()</div>
+                    <div class="operacion-terminal-pieza" draggable="true" data-id="min">min()</div>
                     <div class="operacion-terminal-pieza" draggable="true" data-id="forEach">forEach()</div>
                     <div class="operacion-terminal-pieza" draggable="true" data-id="findFirst">findFirst()</div>
+                    <div class="operacion-terminal-pieza" draggable="true" data-id="findAny">findAny()</div>
                 </div>
             </div>
 
